@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931029
+MANIFEST for ded, version t19931101
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
